<resources>
	<string name="app_name">Popular Movies</string>
	<string name="action_settings">Settings</string>
	<string name="title_most_popular">Most Popular</string>
	<string name="title_highest_rated">Highest Rated</string>
	<string name="title_favorites">Favorites</string>
	<string name="title_activity_detail">Movie Details</string>
	<string name="movie_rating_label">Rating:\u00A0</string>
	<string name="movie_rating_range">/10</string>
	<string name="movie_votes_label">Votes:\u00A0</string>
	<string name="movie_trailers_label">Trailers</string>
	<string name="movie_reviews_label">Reviews</string>
	<string name="space_non_breaking">\u00A0</string>
	<string name="triangle_right">\u25B6</string>
	<string name="content_authority">net.usrlib.android.movies</string>
	<string name="no_internet_message">Connect to the Internet and Try again.</string>
	<string name="saved_to_favorites_message">Saved to Favorites</string>
	<string name="removed_from_favorites_message">Removed from Favorites</string>
	<string name="detail_container_default_message">Please select a Movie to view details</string>
	<string name="no_favorites_message">You haven\'t saved any Favorite Movies Yet! Please browse Movies and save them to your Favorites.</string>
</resources>
