<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="net.usrlib.android.movies.MainActivity">

	<item
		android:id="@+id/action_most_popular"
		android:orderInCategory="1"
		android:title="@string/title_most_popular"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_highest_rated"
		android:orderInCategory="2"
		android:title="@string/title_highest_rated"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_favorites"
		android:orderInCategory="2"
		android:title="@string/title_favorites"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/action_settings"
		app:showAsAction="never"/>
</menu>
