<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				tools:context="net.usrlib.android.movies.DetailActivityFragment"
				tools:showIn="@layout/activity_detail">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="1"
		android:id="@+id/detail_scroll_view">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="left">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<ImageView
					android:id="@+id/movie_poster"
					android:layout_width="@dimen/movie_poster_width"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/default_margin"/>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/movie_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/TextAppearance.AppCompat.Title" />
					<TextView
						android:id="@+id/movie_release_date"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/Base.TextAppearance.AppCompat.Medium"/>

					<LinearLayout
						android:orientation="horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">

						<!--<TextView-->
							<!--android:layout_width="wrap_content"-->
							<!--android:layout_height="wrap_content"-->
							<!--android:text="@string/movie_rating_label"-->
							<!--android:textStyle="italic"-->
							<!--android:layout_marginRight="@dimen/default_margin"-->
							<!--style="@style/Base.TextAppearance.AppCompat.Medium"/>-->
						<TextView
							android:id="@+id/movie_rating"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							style="@style/Base.TextAppearance.AppCompat.Small"/>
						<TextView
							android:id="@+id/movie_rating_range"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/movie_rating_range"
							style="@style/Base.TextAppearance.AppCompat.Small"/>
					</LinearLayout>

					<!--<LinearLayout-->
						<!--android:orientation="horizontal"-->
						<!--android:layout_width="wrap_content"-->
						<!--android:layout_height="wrap_content">-->

						<!--<TextView-->
							<!--android:layout_width="wrap_content"-->
							<!--android:layout_height="wrap_content"-->
							<!--android:text="@string/movie_votes_label"-->
							<!--android:textStyle="italic"-->
							<!--android:layout_marginRight="@dimen/default_margin"-->
							<!--style="@style/Base.TextAppearance.AppCompat.Medium"/>-->
						<!--<TextView-->
							<!--android:id="@+id/movie_votes"-->
							<!--android:layout_width="wrap_content"-->
							<!--android:layout_height="wrap_content"-->
							<!--style="@style/Base.TextAppearance.AppCompat.Medium"/>-->
					<!--</LinearLayout>-->

					<ImageView
						android:id="@+id/button_favorite"
						android:layout_width="@dimen/heart_button_width"
						android:layout_height="wrap_content"/>

				</LinearLayout>

			</LinearLayout>

			<TextView
				android:id="@+id/movie_overview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/default_margin"
				style="@style/Base.TextAppearance.AppCompat.Medium"/>

			<include layout="@layout/divider_line"/>

			<LinearLayout
				android:id="@+id/movie_trailers_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:id="@+id/movie_trailers_label"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/default_margin"
					style="@style/TextAppearance.AppCompat.Title"
					android:text="@string/movie_trailers_label"/>

			</LinearLayout>

			<include layout="@layout/divider_line"/>

			<LinearLayout
				android:id="@+id/movie_reviews_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:id="@+id/movie_reviews_label"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/default_margin"
					style="@style/TextAppearance.AppCompat.Title"
					android:text="@string/movie_reviews_label"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
